; ModuleID = '/home/carl/AnghaBench/i3/src/extr_sync.c_sync_respond.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_sync.c_sync_respond.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i32, i8*, i32 }
%struct.TYPE_3__ = type { i8** }

@.str = private unnamed_addr constant [70 x i8] c"[i3 sync protocol] Sending random value %d back to X11 window 0x%08x\0A\00", align 1
@XCB_CLIENT_MESSAGE = common dso_local global i32 0, align 4
@A_I3_SYNC = common dso_local global i32 0, align 4
@conn = common dso_local global i32 0, align 4
@XCB_EVENT_MASK_NO_EVENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sync_respond(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @DLOG(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0), i8* %7, i8* %8)
  %10 = call i8* @scalloc(i32 32, i32 1)
  store i8* %10, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** %6, align 8
  %13 = load i32, i32* @XCB_CLIENT_MESSAGE, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 4
  store i32 %13, i32* %15, align 8
  %16 = load i8*, i8** %3, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 3
  store i8* %16, i8** %18, align 8
  %19 = load i32, i32* @A_I3_SYNC, align 4
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 32, i32* %23, align 8
  %24 = load i8*, i8** %3, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i8**, i8*** %27, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 0
  store i8* %24, i8** %29, align 8
  %30 = load i8*, i8** %4, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i8**, i8*** %33, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i64 1
  store i8* %30, i8** %35, align 8
  %36 = load i32, i32* @conn, align 4
  %37 = load i8*, i8** %3, align 8
  %38 = load i32, i32* @XCB_EVENT_MASK_NO_EVENT, align 4
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %40 = bitcast %struct.TYPE_4__* %39 to i8*
  %41 = call i32 @xcb_send_event(i32 %36, i32 0, i8* %37, i32 %38, i8* %40)
  %42 = load i32, i32* @conn, align 4
  %43 = call i32 @xcb_flush(i32 %42)
  %44 = load i8*, i8** %5, align 8
  %45 = call i32 @free(i8* %44)
  ret void
}

declare dso_local i32 @DLOG(i8*, i8*, i8*) #1

declare dso_local i8* @scalloc(i32, i32) #1

declare dso_local i32 @xcb_send_event(i32, i32, i8*, i32, i8*) #1

declare dso_local i32 @xcb_flush(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
